2002-06-15  Darin Adler  <darin@apple.com>

	* kwq/kio/jobclasses.h: Removed import of WebFoundation.h.
	* kwq/KWQKjobclasses.mm: Added import of IFURLHandle.h.
	* kwq/KWQKloader.mm: Added import of IFError.h and IFURLHandle.h.

	* kwq/WCLoadProgress.h: Removed.
	* kwq/WCWebDataSource.h: Removed.
	* kwq/KWQKHTMLPart.mm: Removed import of WCWebDataSource.h.

	* *.mm: Changed all includes to imports using a perl script.

2002-06-15  Darin Adler  <darin@apple.com>

	- fixed 2942808 -- remove all calls to WebKit from WebCore

	More work on the bridge. Now we don't call anything in WebKit explicitly,
	although there are still implicit connections that need to be fixed.

	* WebCore.exp: Remove exports that are no longer needed, now that
	WebKit is using the bridge to get at more things.

	* khtml/misc/loader.h:
	* khtml/misc/loader.cpp:
	(CachedCSSStyleSheet::CachedCSSStyleSheet):
	(CachedScript::CachedScript):
	(CachedImage::CachedImage):
	Remove the extra parameter to the CachedObject constructor. We don't
	need it any more, so we can remove all these APPLE_CHANGES.

	* kwq/KWQKHTMLPart.mm: Remove getDataSource.

	* kwq/KWQLoaderImpl.h: Remove destructor.
	* kwq/KWQKloader.mm:
	(-[KWQURLLoadClient initWithLoader:bridge:]): Keep the bridge around instead
	of the data source.
	(-[KWQURLLoadClient dealloc]): Release the bridge instead of the data source.
	Also put another workaround for 2954901 here, like in WebKit.
	(-[KWQURLLoadClient IFURLHandleResourceDidBeginLoading:]):
	(-[KWQURLLoadClient IFURLHandle:resourceDataDidBecomeAvailable:]):
	(-[KWQURLLoadClient doneWithHandle:error:]):
	(-[KWQURLLoadClient IFURLHandleResourceDidCancelLoading:]):
	(-[KWQURLLoadClient IFURLHandleResourceDidFinishLoading:data:]):
	(-[KWQURLLoadClient IFURLHandle:resourceDidFailLoadingWithResult:]):
	(-[KWQURLLoadClient IFURLHandle:didRedirectToURL:]):
	(KWQLoaderImpl::setClient):
	(KWQLoaderImpl::serveRequest):
	Use the bridge to do all the heavy lifting, and put lots of common code into